EASY-2136: File download with content length (#95)
* let single file download return with a Content-Length header
