# src/main/scala/nl.knaw.dans.easy.bagstore/server/StoresServletComponent.scala
@@ -16,6 +16,7 @@
 package nl.knaw.dans.easy.bagstore.server
 
 import java.net.URI
+import java.nio.file.Files
 import java.util.UUID
 
 import nl.knaw.dans.easy.bagstore._
@@ -114,8 +115,6 @@ trait StoresServletComponent {
         .getOrElse(NotFound(s"No such bag-store: $bagstore"))
     }
 
-    // please note that the order in which '/:bagstore/bags/:uuid/*' and '/:bagstore/bags/filesizes/:uuid/*' appear is important!
-    // see http://scalatra.org/guides/2.6/http/routes.html#route-order
     get("/:bagstore/bags/:uuid/*") {
       val bagstore = params("bagstore")
       val uuidStr = params("uuid")
@@ -130,7 +129,12 @@ trait StoresServletComponent {
                 debug(s"Retrieving item $itemId")
                 bagStores.copyToStream(itemId, request.header("Accept").flatMap(acceptToArchiveStreamType), response.outputStream, Some(baseDir))
               })
-              .map(_ => Ok())
+              .map {
+                case Some(filePath) =>
+                  response.setContentLengthLong(Files.size(filePath))
+                  Ok(filePath.toFile)
+                case None => Ok()
+              }
               .getOrRecover {
                 case e: IllegalArgumentException => BadRequest(e.getMessage)
                 case e: NoRegularFileException => BadRequest(e.getMessage)
@@ -138,36 +142,6 @@ trait StoresServletComponent {
                 case e: NoSuchBagException => NotFound(e.getMessage)
                 case e: NoSuchFileItemException => NotFound(e.getMessage)
                 case e: InactiveException => Gone(e.getMessage)
-                case NonFatal(e) =>
-                  logger.error("Error retrieving bag", e)
-                  InternalServerError(s"[${ new DateTime() }] Unexpected type of failure. Please consult the logs")
-              })
-            .getOrElse(NotFound(s"No such bag-store: $bagstore"))
-        case p =>
-          logger.error(s"Unexpected path: $p")
-          InternalServerError("Unexpected path")
-      }
-    }
-
-    // please note that the order in which '/:bagstore/bags/:uuid/*' and '/:bagstore/bags/filesizes/:uuid/*' appear is important!
-    // see http://scalatra.org/guides/2.6/http/routes.html#route-order
-    get("/:bagstore/bags/filesizes/:uuid/*") {
-      val bagstore = params("bagstore")
-      val uuidStr = params("uuid")
-      multiParams("splat") match {
-        case Seq(path) =>
-          bagStores.getBaseDirByShortname(bagstore)
-            .map(baseDir => ItemId.fromString(s"""$uuidStr/${ path }""")
-              .recoverWith {
-                case _: IllegalArgumentException => Failure(new IllegalArgumentException(s"Invalid UUID string: $uuidStr"))
-              }
-              .flatMap(itemId => bagStores.getSize(itemId, Some(baseDir)))
-              .map(size => Ok(body = size))
-              .getOrRecover {
-                case e: IllegalArgumentException => BadRequest(e.getMessage)
-                case e: NoRegularFileException => NotFound(e.getMessage)
-                case e: NoSuchItemException => NotFound(e.getMessage)
-                case e: NoSuchBagException => NotFound(e.getMessage)
                 case NonFatal(e) =>
                   logger.error("Error retrieving bag", e)
                   InternalServerError(s"[${ new DateTime() }] Unexpected type of failure. Please consult the logs")
